# PhaseNet-TF-PS-Figures

./: .gitignore  pyproject.toml  run.py
fig/: manuscript_event_station_distribution.ai
phasenettfps/: __init__.py
phasenettfps/beamforming/core/: bf.py
phasenettfps/beamforming/utils/: io.py  optim.py  setting.py
phasenettfps/data/Plate_Boundaries/: bird_2002_boundaries
phasenettfps/data/catalog/: 1st_round_before_energy.csv  1st_round_for_beamforming.csv  beamforming_input_manual_picks.csv  deep_learning_for_deep_earthquakes_catalog.csv  stations.json  tonga_catalog_updated_2023_0426.csv  tonga_picks_updated_2023_0426.csv
phasenettfps/data/mcmc/mcmcbf_manual_filtered__v_takeoff_1_3_15_45/: arrival_info.csv
phasenettfps/data/waveforms/: waveform.h5  waveform_ps_v1.h5
phasenettfps/scripts/: __init__.py  manuscript_beamforming_example.py  manuscript_compare_manual_final_catalogs.py  manuscript_event_station_distribution.py  manuscript_final_map_compare.py  manuscript_manual_picks_ptf_example.py  manuscript_mcmc_histogram.py  manuscript_prior_posterior_distribution.py  manuscript_ps_residuals.py  manuscript_ptf_predictions_ptf_example.py  manuscript_timediff_vs_distance.py
phasenettfps/utils/: __init__.py
