[tool.poetry]
name = "phasenet-tf-ps-figures"
version = "0.1.0"
description = ""
authors = ["Ziyi Xi <ziyixi@mail.ustc.edu.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygmt = "^0.8.0"
obspy = "^1.4.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
nnaudio = "^0.3.3"
h5py = "^3.10.0"
httpx = "^0.27.0"
tqdm = "^4.66.2"
pyproj = "^3.6.1"
numba = "^0.59.0"
pymap3d = "^3.1.0"
arviz = "^0.17.0"
xarray = "^2024.2.0"
statsmodels = "^0.14.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"